os.ExpandEnv AND string_template_eval arguments

--- a/examples/nginx/Makefile
+++ b/examples/nginx/Makefile
@@ -21,7 +21,7 @@ run-staging: stop
 	docker run -d -p 80:80 -e DEPLOYMENT_ENV=staging --name dockerfied-nginx dockerfied-nginx \
 		     -overlay /tmp/overlays/_common/html:/usr/share/nginx/ \
 		     -overlay /tmp/overlays/MISSING/html:/usr/share/nginx/ \
-	         -overlay "/tmp/overlays/{{ .Env.DEPLOYMENT_ENV }}/html:/usr/share/nginx/" \
+	         -overlay '/tmp/overlays/$$DEPLOYMENT_ENV/html:/usr/share/nginx/' \
 	         -- nginx
 	open http://$(shell docker-machine ip $(shell docker-machine active))/robots.txt
 	open http://$(shell docker-machine ip $(shell docker-machine active))
@@ -29,7 +29,7 @@ run-staging: stop
 run-prod: stop
 	docker run -d -p 80:80 -e DEPLOYMENT_ENV=prod --name dockerfied-nginx dockerfied-nginx \
 		     -overlay /tmp/overlays/_common/html:/usr/share/nginx/ \
-	         -overlay "/tmp/overlays/{{ .Env.DEPLOYMENT_ENV }}/html:/usr/share/nginx/" \
+	         -overlay '/tmp/overlays/$$DEPLOYMENT_ENV/html:/usr/share/nginx/' \
 	         -- nginx
 	open http://$(shell docker-machine ip $(shell docker-machine active))/robots.txt
 
@@ -43,8 +43,8 @@ run-prod-secrets: stop
 				-e SECRETS_FILE=/secrets/secrets.env \
 				dockerfied-nginx \
 					-overlay /tmp/overlays/_common/html:/usr/share/nginx/ \
-					-overlay "/tmp/overlays/{{ .Env.DEPLOYMENT_ENV }}/html:/usr/share/nginx/" \
-					-template "/secrets/secrets.html.tmpl:/usr/share/nginx/html/secrets.html" \
+					-overlay '/tmp/overlays/{{ .Env.DEPLOYMENT_ENV }}/html:/usr/share/nginx/' \
+					-template '/secrets/secrets.html.tmpl:/usr/share/nginx/html/secrets.html' \
  			        -- nginx 
 	open http://$(shell docker-machine ip $(shell docker-machine active))/secrets.html
 
