Add a docker-compose.yml example More Documentation cleanup Add Dockerfile.nginx-with-dockerfy Fix hanging bug on primary command Fix early exit bug on -run commands More complete test coverage

--- a/examples/nginx/Dockerfile
+++ b/examples/nginx/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginx:1.9
-MAINTAINER Jason Wilder mail@jasonwilder.com
+MAINTAINER Mark Riggins mark.riggins@gmail.com
 
 RUN apt-get update -qq && apt-get install -y vim
 
