Add --user option that works on OSX but for some reason NOT on LINUX!!! Rework how we remove --start and --run commands from the os.Args Add --help for verbose help, and shorten usage() drastically Turn off superfluous commentary unless we're in --verbose mode Stop using goxc to build cross-platform binaries Fix hang that was happening on --run commands with no primary

--- a/examples/nginx/Dockerfile.nginx-with-dockerfy
+++ b/examples/nginx/Dockerfile.nginx-with-dockerfy
@@ -1,11 +1,6 @@
 FROM nginx:1.9
 
-COPY .dockerfy_linux_amd64.tar.gz /tmp/
-
-RUN  cd /usr/local/bin && \
-    tar -xzv --strip-components=1 -f /tmp/.d*.gz dockerfy_linux_amd64/dockerfy && \
-    rm /tmp/.d*.gz &&  \
-    echo "daemon off;" >> /etc/nginx/nginx.conf
+COPY .dockerfy-linux-amd64 /usr/local/bin/dockerfy
 
 
 ENTRYPOINT [ 'dockerfy' ]
